# datamind

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md
ai-engine/: pyproject.toml  requirements.txt
ai-engine/src/datamind_ai/: __init__.py  config.py  server.py
ai-engine/src/datamind_ai/embeddings/: __init__.py  model.py
ai-engine/src/datamind_ai/evaluation/: __init__.py  quality.py  summary.py  tags.py
ai-engine/src/datamind_ai/inference/: __init__.py  predict.py
ai-engine/src/datamind_ai/pipelines/: __init__.py  ingest_pipeline.py
ai-engine/src/datamind_ai/preprocessing/: __init__.py  loaders.py  profilers.py
ai-engine/src/datamind_ai/training/: __init__.py  config.py  lora.py  trainer.py
ai-engine/tests/: test_smoke.py
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/tests/: test_basic.py
docker/: ai-engine.Dockerfile  backend.Dockerfile  docker-compose.yml  frontend.Dockerfile  og-bridge.Dockerfile
docs/: 0G_INTEGRATION.md  API.md  ARCHITECTURE.md  DEMO.md  DEPLOY_VERCEL_RAILWAY.md  WEB3_UPGRADE.md
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/components/: providers.tsx
frontend/content/: landing.ts
frontend/hooks/: useDatasetPublish.ts  useLiveTopic.ts
frontend/lib/: api.ts  auth-store.ts  env.ts  privy.tsx  queries.ts  utils.ts
frontend/types/: index.ts
infra/: README.md
scripts/: db_reset.py  export-abi.sh  run.sh
smart-contracts/: README.md  foundry.toml
(+152 files in other folders)
